public/style.css
* {
  /* box-sizing: none; */
  padding: 0;
  margin: 0;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

/* .navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2vh;
  padding-left: 10vh;
  padding-right: 10vh;
  background-color: #394867;
  color: white;
}

.navbar > a {
  color: white;
  text-decoration: none;
} */

.home {
  position: absolute;
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  text-align: center;
  padding-left: 100px;
}

.login {
  position: absolute;
  top: 0;
  display: flex;
  align-items: center;
  height: 100%;
  padding-left: 100px;
  flex-direction: column;
  justify-content: center;
}

.register {
  padding: 30px;
  margin: 50px auto;
}

.header {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}

.view {
  max-width: 75%;
  margin: auto;
  padding-top: 65px;
  justify-content: center;
  align-items: center;
}

